Build issue fixes for gradle version 7.5